# alx_travel_app_0x03

./: README.md  pyproject.toml
alx_travel_app/: README.md
alx_travel_app/alx_travel_app/: settings.py  urls.py
alx_travel_app/listings/: models.py  serializers.py  tasks.py  views.py
alx_travel_app/listings/management/commands/: seed.py
alx_travel_app/listings/migrations/: 0001_initial.py  0002_payment.py
